<resources>
    <string name="app_name">药康付·药师家</string>

    <string name="input_phone_num">请输入手机号码</string>
    <string name="input_verification">请输入验证码</string>
    <string name="input_password">请输入密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="input_again_password">请再次输入新密码</string>
    <string name="input_regular_password">请输入6-16位的字母数字的密码</string>
    <string name="input_regular_name">请输入不少于1位字母数字的名称</string>
    <string name="login_in">登录</string>
    <string name="login_out">退出登录</string>
    <string name="confirm">确定</string>
    <string name="forget_password">忘记密码?</string>
    <string name="send_sms_code">发送验证码</string>
    <string name="login_password">密码登录</string>
    <string name="login_code">验证码登录</string>
    <string name="set_password">设置密码</string>
    <string name="set_password_desc">请为您的账号设置一个密码，用于以后登录账号使用</string>
    <string name="alter_password">修改密码</string>
    <string name="about_us">关于我们</string>
    <string name="app_version">版本</string>
    <string name="back">返回</string>
    <string name="set_complete">完成</string>
    <string name="audit_order">待审核订单</string>
    <string name="next_step">下一步</string>
    <string name="work_room">工作室</string>
    <string name="welfare_discount">药品福利</string>
    <string name="with_drawal">提现</string>
    <string name="personal_center">我的</string>
    <string name="my_pharmacy">我的药房</string>
    <string name="patient_recruited">患者招募</string>
    <string name="my_message">我的消息</string>
    <string name="all_order">全部订单</string>
    <string name="pharmacy_warehouse">药品库</string>
    <string name="order_receipt">下单收款</string>
    <string name="sweep_code">扫码核销</string>
    <string name="pharmacist_code">药师二维码</string>
    <string name="medicine_pay_code">药康付二维码</string>

    <string name="unbind_pharmacy">您尚未绑定药房</string>
    <string name="binding_pharmacy">绑定药房</string>
    <string name="add_pharmacy">新增药房</string>
    <string name="not_join">暂不加入</string>
    <string name="binding_now">立即绑定</string>
    <string name="unbind_wechat">未绑定微信</string>
    <string name="read_accept">已阅读并同意</string>
    <string name="protocol_state">《药师端app协议说明》</string>
    <string name="privacy_state">《药师端app隐私政策》</string>
    <string name="serve_protocol">《服务协议》</string>
    <string name="privacy_protocol">《隐私协议》</string>
    <string name="accept_protocol">同意</string>
    <string name="cancel_protocol">取消</string>
    <string name="refuse">拒绝</string>
    <string name="delete">删除</string>

    <string name="my_integral_num">积分</string>
    <string name="integral_rank">积分排名</string>
    <string name="order_reconce">订单对账</string>
    <string name="pharmacy_user">药房成员</string>
    <string name="pharmacy_drug">药房药品</string>
    <string name="pharmacy_order">药房订单</string>
    <string name="my_welfare">我的福利</string>
    <string name="my_setting">设置</string>
    <string name="not_rank">暂无排名</string>
    <string name="please_bind_pharmacy">请绑定药房</string>
    <string name="pharmacy_brand">药房品牌</string>
    <string name="my_location">位置</string>
    <string name="national_rank">全国排名</string>
    <string name="my_rank">我的排名</string>
    <string name="not_found_pharmacy">没有找到药房</string>
    <string name="username">姓名</string>
    <string name="idcard">身份证</string>
    <string name="input_real_name">请输入您的真实姓名</string>
    <string name="input_id_card">请输入18位身份证号</string>
    <string name="pharmacy_name">药店名称</string>
    <string name="pharmacy_address">药店地址</string>
    <string name="confirm_join">确定加入</string>
    <string name="back_main">返回首页</string>
    <string name="confirm_success">提交成功</string>
    <string name="exit_bind_pharmacy">解绑药房</string>
    <string name="drug_recruit">药品招募</string>
    <string name="insuran_recruit">保险招募</string>
    <string name="stamps_recruit">问券招募</string>
    <string name="pharmacist">药师</string>
    <string name="manager">店长</string>
    <string name="manager_desc">如需修改信息或退出药房</string>
    <string name="pharmacist_desc">如更换店长</string>
    <string name="myself">我自己</string>
    <string name="resuide_integral">剩余积分</string>
    <string name="with_drawal_explain">提现规则说明</string>
    <string name="imm_with_drawal">立即提现</string>
    <string name="confirm_with_drawal">确定提现</string>
    <string name="with_drawal_wechat">提现至微信零钱（实时到账）</string>
    <string name="with_drawal_integral">提现积分</string>
    <string name="input_integral_num">请输入需要提现的积分数</string>
    <string name="integral_rule">今日可提现1次，最高可提现499积分</string>
    <string name="integral_rule_undrawal">您的提现次数已用完，请明日再来</string>
    <string name="with_drawal_tutorial">提现教程</string>
    <string name="integral_record">积分记录</string>
    <string name="integral_rules">积分规则</string>
    <string name="with_drawal_rules">提现规则</string>

    <string name="with_drawal_result">提现成功</string>
    <string name="bind_pharmacy_result">您申请的绑定药房信息已提交</string>
    <string name="bind_pharmacy_audit">您提交的绑定药房信息正在审核中， 请耐心等待</string>
    <string name="bind_pharmacy_refused">您申请绑定药房信息已被拒绝，请联系客服</string>
    <string name="bind_pharmacy_forzen">您申请绑定药房信息已被冻结，请联系客服</string>
    <string name="refused_tips">您申请的绑定信息已被拒绝，请重新绑定</string>

    <string name="call_server">联系客服</string>
    <string name="please_select">请选择</string>
    <string name="search_pharmacy_name">搜索药房名称</string>
    <string name="pharmacy_put_away">上架</string>
    <string name="pharmacy_sold_out">下架</string>
    <string name="drug_alter">修改</string>
    <string name="drug_info_alter">修改药品</string>
    <string name="please_input_pmname">请输入药品名</string>
    <string name="drug_repertory">库存:</string>
    <string name="drug_price">价格:</string>
    <string name="hot_drug">推荐药品库</string>
    <string name="all_drug">全部药品库</string>
    <string name="drug_up_history">上架记录</string>
    <string name="up_select_drug">上架选中药品</string>
    <string name="reset">重置</string>
    <string name="date_title">日期</string>
    <string name="continue_up_drug">继续上架</string>
    <string name="continue_down_drug">继续下架</string>
    <string name="add_desc">请留下您希望增加的药品信息，我们会尽快安排将药品增加到药品库</string>
    <string name="drug_name">药品名称</string>
    <string name="drug_common_name">通用名</string>
    <string name="drug_spec">规格</string>
    <string name="drug_manufa">生产厂家</string>
    <string name="please_input_drug_name">请输入药品名称</string>
    <string name="please_input_common_name">请输入药品通用名</string>
    <string name="please_input_drug_spec">请输入药品规格</string>
    <string name="please_input_drug_manufa">请输入药品生产厂家</string>
    <string name="add_drug">新增药品</string>
    <string name="token_fail">登录失效，请重新登录</string>
    <string name="find_new_version">发现新版本</string>
    <string name="legal_agreement">注册法律风险提示</string>
    <string name="platform_registed">平台注册协议</string>
    <string name="platform_service">平台服务协议</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="uoload_idcard">上传本人手持身份证正面和白纸签字照片</string>
    <string name="upload_invoice">请上传药品发票</string>

    <string name="title_dialog">Tips</string>
    <string name="message_permission_rationale">Grant the following permissions to continue the program:\n\n%1$s
    </string>
    <string name="message_permission_always_failed">请允许</string>
    <string name="message_permission_run">权限,保证APP正常运行</string>
</resources>
