<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_dialog_shape"
                android:orientation="vertical"
                android:id="@+id/ll_dialog_bottom">

    <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ll_dialog_bottom_btn"
            android:gravity="center"
            android:padding="@dimen/dimen_16dp"
            android:text="@string/token_fail"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/font_16sp"/>


    <LinearLayout
            android:id="@+id/ll_dialog_bottom_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48dp"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

        <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/cancel_protocol"
                android:textSize="@dimen/font_16sp"/>

        <TextView
                android:id="@+id/tv_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/confirm"
                android:textColor="@color/bottom_tab_text_color"
                android:textSize="@dimen/font_16sp"/>

    </LinearLayout>
</RelativeLayout>